[package]
authors = ["Lars Jellema <lars.jellema@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "async-spi"
version = "0.1.0"

[dependencies.async-heapless]
path = "../async-heapless"

[features]
stm32l4x6 = [ "cortex-m", "cortex-m-rt", "stm32l4xx-hal/stm32l4x6", "stm32l4xx-hal/rt" ]

[dependencies.cortex-m]
version = "0.6.0"
optional = true

[dependencies.cortex-m-rt]
version = "0.6.10"
optional = true

[dependencies.stm32l4xx-hal]
version = "0.5.0"
optional = true
